trys to fix button styles on mobile

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -256,6 +256,7 @@ input[type="tel"],
 input[type="url"],
 input[type="password"],
 input[type="submit"],
+input[type="button"],
 textarea {
   -webkit-appearance: none;
      -moz-appearance: none;
